--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Titillium+Web">
-    <link rel="stylesheet" href="css/font-awesome.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="css/style.css">
     <title>Homework_007</title>
 </head>
@@ -18,9 +17,7 @@
         <input type="text" id="input" placeholder="Enter information">
         <div class="content">
             <!-- show list -->
-            <ul id="list">
-               
-            </ul>
+            <ul id="list"></ul>
         </div>
     <script src="js/index.js"></script>
 </body>
